--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
     <h1>People entered:</h1>
     <h2 id="count-el">0</h2>
-    <button id="increment-btn" onclick="increment()">INCREMENT</button><br><br>
+    <button id="increment-btn" onclick="increment()">Click here</button><br><br>
     <button id="save-btn" onclick="save()">SAVE</button>
     <p id="save-el">Previous Entries: </p>
     <script src="psgr counter.js"></script> 
